--- a/styles/projects.css
+++ b/styles/projects.css
@@ -1,10 +1,14 @@
-.hero-section
+#hero-section
 {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     gap: 6rem;
+
+    padding: 0% 5%;
+
+    scroll-margin-top: 0;
 }
 .projects-h1
 {
@@ -42,10 +46,10 @@
 
 .category-section
 {
-    width: 90%;
+    width: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
+    justify-content: flex-start;
     align-items: center;
 }
 .category-section-container
@@ -55,7 +59,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 6rem;
+    gap: 4rem;
 
     padding: 3rem 0rem;
     border: solid 0.5rem var(--text-color-first);
